[gd_scene load_steps=2 format=3 uid="uid://c5rg8qxhk2tbf"]

[ext_resource type="Script" path="res://scripts/UnitTransferDialog.gd" id="1_transfer"]

[node name="UnitTransferDialog" type="Window"]
title = "Unit Transfer"
initial_position = 2
size = Vector2i(400, 250)
script = ExtResource("1_transfer")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Territory Conquered!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Move armies to conquered territory"
autowrap_mode = 3

[node name="TerritoryLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "From: Territory â†’ To: Territory"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="TransferControl" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/TransferControl"]
layout_mode = 2
text = "Armies to Transfer:"

[node name="SpinBox" type="SpinBox" parent="Panel/VBox/TransferControl"]
layout_mode = 2
min_value = 1.0
max_value = 100.0
value = 1.0

[node name="ConstraintLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "(Must transfer at least 1, leave at least 1 in source)"
autowrap_mode = 3

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
text = "Confirm Transfer"

[node name="CancelButton" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
text = "Cancel"
